add vue logic to message

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,11 @@ body {
     width: 100%;
 }
 
-.bg_green {
+.received {
+    background-color: var(--bz-app-white);
+}
+
+.sent {
     background-color: var(--bz-app-success);
 }
 
