--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
     background: linear-gradient(to top,
             var(--bz-app-principal) 85%,
             var(--bz-app-header) 15%);
+    height: 100vh;
 }
 
 
@@ -28,6 +29,7 @@ body {
 .chats {
     height: 100%;
     flex-grow: 1;
+    overflow-y: scroll;
 }
 
 .bg_principal {
@@ -52,7 +54,7 @@ body {
 } */
 
 .font_size_sm {
-    font-size: 8px;
+    font-size: 10px;
 }
 
 .bg_whatsapp {
